--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,156 @@
   src: url("/fonts/europa.woff");
 }
 
+@font-face {
+  font-family: Europa;
+  src: url("/fonts/europa.woff");
+}
+
+body.login .container {
+  height: 100vh;
+  display: flex;
+}
+
+body.login .img-container {
+  width: 45vw;
+  background-image: url("../img/red.jpg");
+  background-size: cover;
+  background-position: center;
+}
+
+body.login .img-container .content-container {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+body.login .img-container .logo-container {
+  padding: 50px 80px;
+  height: 200px;
+  background-image: linear-gradient(to top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5));
+}
+
+body.login .img-container .logo-container img {
+  width: 120px;
+}
+
+body.login .img-container .bottom {
+  height: 30vh;
+  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.8));
+  padding: 0 80px;
+  display: grid;
+  grid-template-rows: repeat(2, max-content);
+  align-content: center;
+  justify-content: center;
+  row-gap: 20px;
+  color: white;
+}
+
+body.login .img-container .bottom #quote {
+  color: #fafafa;
+  transition: 0.1s ease-out;
+}
+
+body.login .img-container .bottom #author {
+  justify-self: flex-end;
+  color: #f8f8f8;
+  transition: 0.4s ease-out;
+}
+
+body.login .img-container .bottom #quote,
+body.login .img-container .bottom #author {
+  opacity: 0;
+}
+
+body.login .login-container {
+  height: 90%;
+  width: 55vw;
+  display: grid;
+  grid-template-rows: repeat(2, min-content);
+  align-content: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+body.login .login-container img {
+  width: 400px;
+  margin-bottom: 60px;
+}
+
+body.login .login-container h2.welcome {
+  font-weight: 600;
+}
+
+body.login .login-container p {
+  margin: 10px 0 60px 0;
+  color: #888;
+  font-size: 15px;
+}
+
+body.login .login-container form {
+  width: 400px;
+  display: flex;
+  flex-direction: column;
+}
+
+body.login .login-container form .row-container {
+  margin-bottom: 10px;
+}
+
+body.login .login-container form .row-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+body.login .login-container form .row-container span,
+body.login .login-container form .row-container a {
+  font-size: 14px;
+  font-weight: 500;
+}
+
+body.login .login-container form .row-container span {
+  color: #444;
+}
+
+body.login .login-container form .row-container a {
+  color: #1b6fad;
+}
+
+body.login .login-container form label {
+  font-weight: 500;
+}
+
+body.login .login-container form input {
+  margin-left: -2px;
+  margin-bottom: 30px;
+  padding: 12px 8px;
+  background: #f5f6f8;
+  border: none;
+  border-radius: 8px;
+  font-size: 15px;
+  transition: 0.2s ease-out;
+}
+
+body.login .login-container form input:hover {
+  background: #f2f2f2;
+}
+
+body.login .login-container form input:focus {
+  background: #ebebeb;
+}
+
+body.login .login-container button {
+  width: max-content;
+  padding: 10px 24px;
+  background: #e20c18;
+  border-radius: 8px;
+  font-size: 14px;
+  font-weight: 500;
+  color: white;
+}
+
 * {
   padding: 0;
   margin: 0;
