--- a/css/_login.scss
+++ b/css/_login.scss
@@ -8,7 +8,7 @@ body.login {
   }
   .img-container {
     width: 45vw;
-    background-image: url("../img/red.jpg");
+    background-image: url("../img/roses.jpg");
     background-size: cover;
     background-position: center;
     .content-container {
@@ -19,11 +19,11 @@ body.login {
     }
     .logo-container {
       padding: 50px 80px;
-      height: 200px;
+      height: 100px;
       background-image: linear-gradient(
         to top,
         rgba(0, 0, 0, 0),
-        rgba(0, 0, 0, 0.5)
+        rgba(0, 0, 0, 0.2)
       );
       img {
         width: 120px;
@@ -59,7 +59,8 @@ body.login {
     }
   }
   .login-container {
-    height: 90%;
+    height: 100%;
+    transform: translateY(-5%);
     width: 55vw;
     display: grid;
     grid-template-rows: repeat(2, min-content);
