--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ body.login .container {
 
 body.login .img-container {
   width: 45vw;
-  background-image: url("../img/red.jpg");
+  background-image: url("../img/roses.jpg");
   background-size: cover;
   background-position: center;
 }
@@ -29,8 +29,8 @@ body.login .img-container .content-container {
 
 body.login .img-container .logo-container {
   padding: 50px 80px;
-  height: 200px;
-  background-image: linear-gradient(to top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5));
+  height: 100px;
+  background-image: linear-gradient(to top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.2));
 }
 
 body.login .img-container .logo-container img {
@@ -66,7 +66,8 @@ body.login .img-container .bottom #author {
 }
 
 body.login .login-container {
-  height: 90%;
+  height: 100%;
+  transform: translateY(-5%);
   width: 55vw;
   display: grid;
   grid-template-rows: repeat(2, min-content);
