--- a/css/admin/admin.scss
+++ b/css/admin/admin.scss
@@ -1,5 +1,6 @@
 @import "../mixin";
 @import "nav";
+@import "options";
 @import "notifications";
 @import "profile";
 
@@ -22,11 +23,12 @@ h3 {
   font-weight: 500;
 }
 
+// aligned to center, 100% zoom at 1920x1080
 @media screen and (min-width: 1500px) and (max-width: 3000px) {
   .container {
     width: 100vw !important;
     margin: 0 0 0 0 !important;
-    padding: 50px 0 50px 0;
+    padding: 50px 0 50px 0 !important;
     display: flex;
     justify-content: center;
   }
@@ -36,7 +38,7 @@ h3 {
 .container {
   width: 64vw;
   margin: 0 0 0 18rem;
-  padding: 12px 0 0 100px;
+  padding: 0 0 0 100px !important;
   display: flex;
 }
 
@@ -101,108 +103,6 @@ h3 {
   }
 }
 
-@keyframes slide-right {
-  0% {
-    transform: translateX(0);
-  }
-  100% {
-    transform: translateX(5px);
-  }
-}
-
-@keyframes slide-left {
-  0% {
-    transform: translateX(5px);
-    transform: rotate(360deg);
-  }
-  100% {
-    transform: translateX(0);
-    transform: rotate(0deg);
-  }
-}
-
-// dropdown
-.options-container {
-  margin-bottom: 18px;
-  display: flex;
-  align-items: center;
-  column-gap: 20px;
-  overflow: hidden;
-  span,
-  p,
-  input {
-    font-size: 12px;
-    @include poppins;
-  }
-
-  &:focus-within,
-  &:hover {
-    .show-options {
-      color: #000;
-      i {
-        animation: slide-right 0.1s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
-        color: #000;
-      }
-    }
-    .options {
-      transform: translateX(0px);
-      opacity: 1;
-      pointer-events: visible;
-    }
-  }
-  .show-options {
-    display: flex;
-    align-items: center;
-    column-gap: 8px;
-    color: #444;
-    i {
-      color: #aaa;
-      animation: slide-left 0.3s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
-      font-size: 10px;
-    }
-  }
-  .options {
-    display: flex;
-    align-items: center;
-    column-gap: 30px;
-    transform: translateX(-15px);
-    transition: 0.1s ease-out;
-    opacity: 0;
-    pointer-events: none;
-    .sort {
-      display: flex;
-      align-items: center;
-      column-gap: 10px;
-      form {
-        button {
-          padding: 4px 8px;
-          background: #f3f3f3;
-          border-radius: 16px;
-          &:hover {
-            background: #ddd;
-          }
-          &:focus {
-            background: #ccc;
-          }
-        }
-      }
-    }
-    form {
-      input {
-        height: 25px;
-        width: 35px;
-        padding: 0 0 0 10px;
-        background: #f3f3f3;
-        border-radius: 8px;
-        border: 1px solid #fff;
-        &::-webkit-inner-spin-button {
-          opacity: 1;
-        }
-      }
-    }
-  }
-}
-
 .card {
   min-height: 50px;
   width: auto;
@@ -235,14 +135,13 @@ form {
     background: #f3f3f3;
     border: none;
     border-radius: 8px;
-    height: 40px;
     transition: 0.1s ease-out;
     border-bottom: 1px solid #f3f3f3;
     &:hover {
-      background: #eaeaea;
+      background: #eee;
     }
     &:focus {
-      background: #eaeaea;
+      background: #eee;
       border-bottom: 1px solid #888;
       transition: 0.2s ease-out;
     }
@@ -292,7 +191,7 @@ table {
         opacity: 0;
         transition: 0.15s;
         &:focus {
-          font-size: 12px;
+          font-size: 10px;
         }
       }
     }
