--- a/css/admin/_options.scss
+++ b/css/admin/_options.scss
@@ -90,7 +90,7 @@
         font-size: 14px;
         font-weight: 500;
         transform: translateX(-20px);
-        transition: 0.2s ease-out;
+        transition: 0.2s ease-in-out;
         cursor: pointer;
         position: relative;
         z-index: -99;
