Added notification dot at nav

--- a/css/admin/_nav.scss
+++ b/css/admin/_nav.scss
@@ -69,6 +69,13 @@ nav {
   .nav-notification {
     position: absolute;
     bottom: 110px;
+    .notification-dot {
+      height: 5px;
+      width: 5px;
+      background: $red;
+      color: #444;
+      border-radius: 50%;
+    }
   }
 
   hr {
