--- a/css/style.scss
+++ b/css/style.scss
@@ -14,7 +14,7 @@ body {
 }
 
 .loading-screen {
-  // background: white;
+  background: white;
   height: 100vh;
   width: 100vw;
   position: fixed;
