--- a/css/admin/_notifications.scss
+++ b/css/admin/_notifications.scss
@@ -31,8 +31,9 @@
     padding: 12px 12px 12px 16px;
     .notification-heading {
       display: flex;
-      align-items: center;
       justify-content: space-between;
+      align-items: center;
+      column-gap: 8px;
       button {
         border-radius: 50%;
         transition: 0.2s;
