--- a/css/admin/_nav.scss
+++ b/css/admin/_nav.scss
@@ -9,8 +9,10 @@ nav {
   flex-direction: column;
   align-items: center;
   border-right: 1px solid #eee;
-  .admin-logo-link:focus {
-    border: 1px solid $red;
+  .admin-logo-link {
+    &:focus {
+      transform: scale(1.05);
+    }
   }
   .admin-logo {
     padding: 50px 0;
