--- a/css/admin/admin.scss
+++ b/css/admin/admin.scss
@@ -46,7 +46,6 @@ h3 {
 
 .content-container {
   display: flex;
-  justify-content: center;
   flex-direction: column;
 }
 
@@ -111,9 +110,10 @@ h3 {
 
 .card {
   min-height: 50px;
+  width: 100%;
   max-width: 700px !important;
   margin-bottom: 60px;
-  padding: 16px 20px 16px 20px;
+  padding: 16px 20px 4px 20px;
   display: flex;
   row-gap: 8px;
   border: 2px solid #ddd;
