--- a/css/admin/admin.css
+++ b/css/admin/admin.css
@@ -366,16 +366,15 @@ label {
   font-size: 16px;
 }
 
-h2,
-h3 {
-  font-weight: 500;
+h2 {
+  font-size: 22px;
 }
 
 @media screen and (min-width: 1500px) and (max-width: 3000px) {
   .container {
     width: 100vw !important;
     margin: 0 0 0 0 !important;
-    padding: 50px 0 50px 0 !important;
+    padding: 0 0 50px 0 !important;
     display: flex;
     justify-content: center;
   }
@@ -384,7 +383,7 @@ h3 {
 .container {
   width: 64vw;
   margin: 0 0 0 18rem;
-  padding: 0 0 0 100px !important;
+  padding: 0 0 0 100px;
   display: flex;
 }
 
@@ -473,8 +472,6 @@ h3 {
 
 .card {
   min-height: 50px;
-  width: 100%;
-  max-width: 700px !important;
   margin-bottom: 60px;
   padding: 16px 20px 4px 20px;
   display: flex;
@@ -522,6 +519,7 @@ form input:focus {
 
 table {
   width: 100%;
+  max-width: 700px !important;
   border-collapse: collapse;
 }
 
