--- a/css/admin/admin.scss
+++ b/css/admin/admin.scss
@@ -158,6 +158,7 @@ table {
   border-collapse: collapse;
   tr {
     text-align: left;
+    transition: 0.06s ease-out;
     &:focus-within {
       background-color: #f3f3f3;
       .status i.fa-arrow-right {
@@ -180,8 +181,8 @@ table {
     flex-direction: row;
     align-items: center;
     .arrow {
+      width: 50% !important;
       position: relative;
-      left: 40px;
       height: 12px;
       width: 12px;
       display: flex;
