--- a/css/admin/admin.scss
+++ b/css/admin/admin.scss
@@ -24,6 +24,13 @@ h2 {
   font-size: 22px;
 }
 
+button {
+  @include poppins;
+  span {
+    @include poppins;
+  }
+}
+
 // aligned to center, 100% zoom at 1920x1080
 @media screen and (min-width: 1500px) and (max-width: 3000px) {
   .container {
@@ -46,6 +53,7 @@ h2 {
 .content-container {
   display: flex;
   flex-direction: column;
+  justify-content: center;
 }
 
 .section {
@@ -121,7 +129,7 @@ h2 {
     padding: 20px 0;
   }
   button {
-    padding: 10px 12px;
+    padding: 8px 12px;
     border: none;
     border-radius: 8px;
     align-self: flex-start;
@@ -131,11 +139,7 @@ h2 {
 }
 
 form {
-  label {
-    font-size: 20px;
-  }
   input {
-    // margin-bottom: 10px;
     background: #f3f3f3;
     border: none;
     border-radius: 8px;
@@ -177,18 +181,20 @@ table {
     border-top: 1px solid #ddd;
   }
   .status {
+    width: 100%;
     display: flex;
     flex-direction: row;
     align-items: center;
+    justify-content: space-between;
     .arrow {
-      width: 50% !important;
-      position: relative;
       height: 12px;
       width: 12px;
+      padding: 6px;
       display: flex;
       justify-content: center;
       align-items: center;
-      padding: 6px;
+      position: relative;
+      right: 40px;
       cursor: pointer;
       i {
         position: absolute;
