--- a/css/admin/admin.scss
+++ b/css/admin/admin.scss
@@ -216,3 +216,9 @@ table {
     }
   }
 }
+
+@media screen and (min-height: 600px) and (max-height: 700px) {
+  .container {
+    margin: 0 0 0 15rem !important;
+  }
+}
