--- a/css/style.scss
+++ b/css/style.scss
@@ -63,6 +63,68 @@ body {
   }
 }
 
+.toast-container {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  position: fixed;
+  left: 0;
+  bottom: 20px;
+  transform: translateY(10px);
+  opacity: 0;
+  z-index: -1;
+  transition: 0.1s ease-out;
+  &.active {
+    transform: translateY(0px);
+    opacity: 1;
+    z-index: 1;
+    span {
+      user-select: unset;
+    }
+    .toast button {
+      display: block;
+    }
+  }
+  .toast {
+    height: max-content;
+    padding: 6px 8px 6px 22px;
+    display: flex;
+    align-items: center;
+    column-gap: 8px;
+    background: #fafafa;
+    border: 1px solid #ccc;
+    border-radius: 12px;
+    font-size: 15px;
+    .close-btn-container {
+      width: 25px;
+    }
+    button {
+      border-radius: 50%;
+      border: 1px solid #f8f8f8;
+      transition: 0.2s;
+      align-self: flex-end;
+      display: none;
+      &:hover,
+      &:focus {
+        background: #fdf0f0;
+        color: $red;
+        border: 1px solid $redBorder;
+      }
+      &:active {
+        background: $redBorder;
+        transition: 0.05s;
+      }
+    }
+    span {
+      user-select: none;
+    }
+    i {
+      padding: 6px 8px;
+      font-weight: 400;
+    }
+  }
+}
+
 img {
   pointer-events: none;
 }
