--- a/css/style.scss
+++ b/css/style.scss
@@ -69,7 +69,7 @@ body {
   justify-content: center;
   position: fixed;
   left: 0;
-  bottom: 20px;
+  bottom: 40px;
   transform: translateY(10px);
   opacity: 0;
   z-index: -1;
@@ -95,6 +95,9 @@ body {
     border: 1px solid #ccc;
     border-radius: 12px;
     font-size: 15px;
+    .toast-message {
+      margin-bottom: 2px;
+    }
     .close-btn-container {
       width: 25px;
     }
