--- a/css/student/student.scss
+++ b/css/student/student.scss
@@ -4,8 +4,8 @@
 @import "home";
 @import "cards";
 @import "request-view";
+@import "new-request";
 @import "mobile";
-@import "toast";
 @import "fab";
 @import "scroll-to-top";
 @import "dropdown";
