--- a/css/student/_request-view.scss
+++ b/css/student/_request-view.scss
@@ -1,7 +1,8 @@
 .top-section {
+  width: max-content;
   display: grid;
   grid-template-columns: repeat(2, max-content);
-  column-gap: 50px;
+  column-gap: 100px;
 }
 
 .payment-section {
@@ -83,7 +84,11 @@
   width: 605.41px;
   display: flex;
   flex-wrap: wrap;
-  .card {
+
+  .card.subject {
+    width: max-content;
+    padding: 20px 20px 8px 20px;
+    align-items: unset;
     margin: 0 30px 30px 0;
   }
 }
