--- a/css/admin/_options.scss
+++ b/css/admin/_options.scss
@@ -33,7 +33,7 @@
     align-items: center;
     column-gap: 10px;
     color: #444;
-    i {
+    i.fa-caret-right {
       color: #aaa;
       animation: slide-left 0.1s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
       font-size: 10px;
@@ -52,7 +52,10 @@
       align-items: center;
       column-gap: 10px;
       a {
-        padding: 4px 10px;
+        height: 30px;
+        display: flex;
+        padding: 0 10px;
+        align-items: center;
         background: #f3f3f3;
         border-radius: 16px;
         &:hover {
@@ -61,6 +64,10 @@
         &:focus {
           background: #ccc;
         }
+      }
+      i.fa-times-circle {
+        margin-left: 4px;
+        font-size: 13px;
       }
     }
     form input {
@@ -80,19 +87,21 @@
     form.search {
       &:focus-within i.fa-search {
         transform: translateX(4px);
-        z-index: 1;
+        opacity: 1;
       }
       input {
         width: 160px;
+        z-index: 99;
       }
       i.fa-search {
         font-size: 14px;
         font-weight: 500;
-        transform: translateX(-20px);
+        transform: translateX(-8px);
         transition: 0.2s ease-in-out;
         cursor: pointer;
         position: relative;
-        z-index: -1;
+        z-index: 0;
+        opacity: 0;
       }
     }
   }
