--- a/css/admin/admin.css
+++ b/css/admin/admin.css
@@ -152,7 +152,7 @@ nav .nav-profile {
   color: #444;
 }
 
-.options-container .show-options i {
+.options-container .show-options i.fa-caret-right {
   color: #aaa;
   animation: slide-left 0.1s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
   font-size: 10px;
@@ -175,7 +175,10 @@ nav .nav-profile {
 }
 
 .options-container .options .sort a {
-  padding: 4px 10px;
+  height: 30px;
+  display: flex;
+  padding: 0 10px;
+  align-items: center;
   background: #f3f3f3;
   border-radius: 16px;
 }
@@ -186,6 +189,11 @@ nav .nav-profile {
 
 .options-container .options .sort a:focus {
   background: #ccc;
+}
+
+.options-container .options .sort i.fa-times-circle {
+  margin-left: 4px;
+  font-size: 13px;
 }
 
 .options-container .options form input {
@@ -205,21 +213,23 @@ nav .nav-profile {
 
 .options-container .options form.search:focus-within i.fa-search {
   transform: translateX(4px);
-  z-index: 1;
+  opacity: 1;
 }
 
 .options-container .options form.search input {
   width: 160px;
+  z-index: 99;
 }
 
 .options-container .options form.search i.fa-search {
   font-size: 14px;
   font-weight: 500;
-  transform: translateX(-20px);
+  transform: translateX(-8px);
   transition: 0.2s ease-in-out;
   cursor: pointer;
   position: relative;
-  z-index: -1;
+  z-index: 0;
+  opacity: 0;
 }
 
 @keyframes slide-right {
