Added pagination buttons and minor styling updates

--- a/css/_colors.scss
+++ b/css/_colors.scss
@@ -6,3 +6,5 @@ $focus: #444;
 $redHover: #fdf0f0;
 $redActive: #fdf0f0;
 $redBorder: #f9ced0;
+$grayHoverBackground: #ddd;
+$lightGrayHoverBackground: #eee;
