--- a/css/admin/_options.scss
+++ b/css/admin/_options.scss
@@ -1,7 +1,7 @@
 // dropdown
 .options-container {
   width: 100%;
-  margin: 20px 0 24px 0;
+  margin: 20px 0 0 0;
   display: flex;
   align-items: center;
   column-gap: 20px;
