--- a/css/student/_home.scss
+++ b/css/student/_home.scss
@@ -1,23 +1,23 @@
 .button.card {
-  height: 150px;
-  width: 150px;
+  height: 140px;
+  width: 140px;
   display: grid;
   grid-template-rows: repeat(2, max-content);
   justify-items: center;
   align-content: center;
   row-gap: 12px;
+  border-radius: 24px;
   z-index: 0;
   animation: scale-down-center 0.1s ease-in both;
   i {
-    font-size: 28px;
+    font-size: 24px;
     font-weight: 300;
   }
   &:hover,
   &:focus {
-    animation: scale-up-center 0.1s ease-out both;
-  }
-  &:focus {
-    border-color: #888;
+    background: #fafafa;
+    border-color: #ccc;
+    animation: scale-up-center 0.15s ease-out both;
   }
 }
 
@@ -26,13 +26,13 @@
     transform: scale(1);
   }
   100% {
-    transform: scale(1.1);
+    transform: scale(1.06);
   }
 }
 
 @keyframes scale-down-center {
   0% {
-    transform: scale(1.1);
+    transform: scale(1.06);
   }
   100% {
     transform: scale(1);
