--- a/css/student/student.css
+++ b/css/student/student.css
@@ -167,28 +167,27 @@ nav img {
 }
 
 .button.card {
-  height: 150px;
-  width: 150px;
+  height: 140px;
+  width: 140px;
   display: grid;
   grid-template-rows: repeat(2, max-content);
   justify-items: center;
   align-content: center;
   row-gap: 12px;
+  border-radius: 24px;
   z-index: 0;
   animation: scale-down-center 0.1s ease-in both;
 }
 
 .button.card i {
-  font-size: 28px;
+  font-size: 24px;
   font-weight: 300;
 }
 
 .button.card:hover, .button.card:focus {
-  animation: scale-up-center 0.1s ease-out both;
-}
-
-.button.card:focus {
-  border-color: #888;
+  background: #fafafa;
+  border-color: #ccc;
+  animation: scale-up-center 0.15s ease-out both;
 }
 
 @keyframes scale-up-center {
@@ -196,13 +195,13 @@ nav img {
     transform: scale(1);
   }
   100% {
-    transform: scale(1.1);
+    transform: scale(1.06);
   }
 }
 
 @keyframes scale-down-center {
   0% {
-    transform: scale(1.1);
+    transform: scale(1.06);
   }
   100% {
     transform: scale(1);
@@ -794,7 +793,7 @@ nav {
   display: grid;
   grid-template-columns: repeat(2, max-content);
   justify-content: center;
-  column-gap: 50px;
+  column-gap: 60px;
   row-gap: 40px;
 }
 
