--- a/css/style.css
+++ b/css/style.css
@@ -74,6 +74,8 @@ body.login .login-container {
   align-content: center;
   justify-content: center;
   flex-direction: column;
+  opacity: 0;
+  transition: 0.1s ease-out;
 }
 
 body.login .login-container img {
