--- a/css/style.css
+++ b/css/style.css
@@ -8,36 +8,66 @@
   src: url("/fonts/europa.woff");
 }
 
-body.login .container {
+body .container-container .form {
+  position: absolute;
+}
+
+body.register .img-container {
+  width: 25vw !important;
+}
+
+body.register .img-container .bottom {
+  opacity: 0;
+}
+
+body.register .form {
+  width: 75vw !important;
+}
+
+body.register #register-form form {
+  width: 450px !important;
+}
+
+body.register #register-form .input-row {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+body.register #register-form .input-row input {
+  width: 200px;
+}
+
+body.index .container {
   height: 100vh;
   display: flex;
 }
 
-body.login .img-container {
+body.index .img-container {
   width: 45vw;
   background-image: url("../img/roses.jpg");
   background-size: cover;
   background-position: center;
 }
 
-body.login .img-container .content-container {
+body.index .img-container .content-container {
   height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
 }
 
-body.login .img-container .logo-container {
+body.index .img-container .logo-container {
   padding: 50px 80px;
   height: 100px;
   background-image: linear-gradient(to top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.2));
 }
 
-body.login .img-container .logo-container img {
+body.index .img-container .logo-container img {
   width: 120px;
 }
 
-body.login .img-container .bottom {
+body.index .img-container .bottom {
   height: 30vh;
   background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.8));
   padding: 0 80px;
@@ -49,23 +79,28 @@ body.login .img-container .bottom {
   color: white;
 }
 
-body.login .img-container .bottom #quote {
+body.index .img-container .bottom #quote {
   color: #fafafa;
   transition: 0.1s ease-out;
 }
 
-body.login .img-container .bottom #author {
+body.index .img-container .bottom #author {
   justify-self: flex-end;
   color: #f8f8f8;
   transition: 0.4s ease-out;
 }
 
-body.login .img-container .bottom #quote,
-body.login .img-container .bottom #author {
+body.index .img-container .bottom #quote,
+body.index .img-container .bottom #author {
   opacity: 0;
 }
 
-body.login .login-container {
+body.index #register-form {
+  opacity: 0;
+  z-index: -1;
+}
+
+body.index .form {
   height: 100%;
   transform: translateY(-5%);
   width: 55vw;
@@ -78,58 +113,59 @@ body.login .login-container {
   transition: 0.1s ease-out;
 }
 
-body.login .login-container img {
+body.index .form img {
   width: 400px;
   margin-bottom: 60px;
 }
 
-body.login .login-container h2.welcome {
-  font-weight: 600;
+body.index .form .heading {
+  margin-bottom: 60px;
 }
 
-body.login .login-container p {
-  margin: 10px 0 60px 0;
+body.index .form .heading .heading-txt {
+  font-weight: 600 !important;
+}
+
+body.index .form .heading .subheading {
+  margin-top: 10px;
   color: #888;
   font-size: 15px;
 }
 
-body.login .login-container form {
+body.index .form form {
   width: 400px;
   display: flex;
   flex-direction: column;
 }
 
-body.login .login-container form .row-container {
-  margin-bottom: 10px;
-}
-
-body.login .login-container form .row-container {
+body.index .form form .row-container {
+  margin-bottom: 8px;
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
 
-body.login .login-container form .row-container span,
-body.login .login-container form .row-container a {
+body.index .form form .row-container span,
+body.index .form form .row-container a {
   font-size: 14px;
   font-weight: 500;
 }
 
-body.login .login-container form .row-container span {
+body.index .form form .row-container span {
   color: #444;
 }
 
-body.login .login-container form .row-container a {
+body.index .form form .row-container a {
   color: #1b6fad;
 }
 
-body.login .login-container form label {
+body.index .form form label {
   font-weight: 500;
 }
 
-body.login .login-container form input {
+body.index .form form input {
   margin-left: -2px;
-  margin-bottom: 30px;
+  margin-bottom: 28px;
   padding: 12px 8px;
   background: #f5f6f8;
   border: none;
@@ -138,15 +174,15 @@ body.login .login-container form input {
   transition: 0.2s ease-out;
 }
 
-body.login .login-container form input:hover {
+body.index .form form input:hover {
   background: #f2f2f2;
 }
 
-body.login .login-container form input:focus {
+body.index .form form input:focus {
   background: #ebebeb;
 }
 
-body.login .login-container button {
+body.index .form button {
   width: max-content;
   padding: 10px 24px;
   background: #e20c18;
