--- a/css/_login.scss
+++ b/css/_login.scss
@@ -1,10 +1,19 @@
 @import "colors";
 @import "mixin";
 
+html,
 body {
+  overflow: hidden;
+}
+
+body {
+  .img-container {
+    transition: 0.5s ease-in-out;
+  }
   .container-container {
     .form {
       position: absolute;
+      transition: 0.2s ease-out;
     }
   }
 }
@@ -12,9 +21,6 @@ body {
 body.register {
   .img-container {
     width: 25vw !important;
-    .bottom {
-      opacity: 0;
-    }
   }
   .form {
     width: 75vw !important;
@@ -96,16 +102,15 @@ body.index {
     z-index: -1;
   }
   .form {
+    width: 55vw;
     height: 100%;
     transform: translateY(-5%);
-    width: 55vw;
     display: grid;
     grid-template-rows: repeat(2, min-content);
     align-content: center;
     justify-content: center;
     flex-direction: column;
     opacity: 0;
-    transition: 0.1s ease-out;
     img {
       width: 400px;
       margin-bottom: 60px;
