--- a/css/style.css
+++ b/css/style.css
@@ -8,16 +8,22 @@
   src: url("/fonts/europa.woff");
 }
 
+html,
+body {
+  overflow: hidden;
+}
+
+body .img-container {
+  transition: 0.5s ease-in-out;
+}
+
 body .container-container .form {
   position: absolute;
+  transition: 0.2s ease-out;
 }
 
 body.register .img-container {
   width: 25vw !important;
-}
-
-body.register .img-container .bottom {
-  opacity: 0;
 }
 
 body.register .form {
@@ -101,16 +107,15 @@ body.index #register-form {
 }
 
 body.index .form {
+  width: 55vw;
   height: 100%;
   transform: translateY(-5%);
-  width: 55vw;
   display: grid;
   grid-template-rows: repeat(2, min-content);
   align-content: center;
   justify-content: center;
   flex-direction: column;
   opacity: 0;
-  transition: 0.1s ease-out;
 }
 
 body.index .form img {
@@ -192,6 +197,57 @@ body.index .form button {
   color: white;
 }
 
+.modal-container {
+  height: 100vh;
+  width: 100%;
+  display: none;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(0, 0, 0, 0.2);
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  box-shadow: 20px 20px 60px rgba(0, 0, 0, 0.1);
+  opacity: 0;
+  z-index: 99;
+  transition: 0.1s ease-out;
+}
+
+.modal-container .modal {
+  width: 400px;
+  margin-bottom: 50px;
+  border-radius: 12px;
+  background-color: white;
+  overflow: hidden;
+}
+
+.modal-container .modal img {
+  width: 100%;
+}
+
+.modal-container .modal .modal-body {
+  display: grid;
+  row-gap: 10px;
+  padding: 28px 32px 28px 32px;
+}
+
+.modal-container .modal .modal-body h3 {
+  line-height: 1;
+}
+
+.modal-container .modal .modal-body button {
+  margin-top: 10px;
+  width: 100%;
+  padding: 8px 0;
+  background: #e20c18;
+  border-radius: 8px;
+  font-size: 14px;
+  font-weight: 500;
+  color: white;
+  text-align: center;
+}
+
 * {
   padding: 0;
   margin: 0;
@@ -251,6 +307,9 @@ body {
   }
 }
 
+/*
+ * Toast
+*/
 .toast-container {
   width: 100%;
   display: flex;
