--- a/css/_modal.scss
+++ b/css/_modal.scss
@@ -5,7 +5,7 @@
   justify-content: center;
   align-items: center;
   background-color: rgba(0, 0, 0, 0.2);
-  position: absolute;
+  position: fixed;
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
@@ -19,16 +19,31 @@
     border-radius: 12px;
     background-color: white;
     overflow: hidden;
+    h3 {
+      line-height: 1;
+    }
     img {
       width: 100%;
+    }
+    .heading {
+      width: inherit;
+      display: flex;
+      justify-content: space-between;
+      position: absolute;
+      h3 {
+        padding: 20px 20px;
+      }
+      .fa-times {
+        padding: 20px 20px;
+        align-self: flex-end;
+        font-weight: 400;
+        cursor: pointer;
+      }
     }
     .modal-body {
       display: grid;
       row-gap: 10px;
       padding: 28px 32px 28px 32px;
-      h3 {
-        line-height: 1;
-      }
       button {
         margin-top: 10px;
         width: 100%;
@@ -41,5 +56,7 @@
         text-align: center;
       }
     }
+  }
+  .modal.registration {
   }
 }
