--- a/css/student/_dropdown.scss
+++ b/css/student/_dropdown.scss
@@ -1,11 +1,5 @@
-.chosen-value,
-.value-list {
-  z-index: 1;
-}
-
 .value-list {
   position: absolute;
-  top: 420px;
 }
 
 .chosen-value {
@@ -31,7 +25,7 @@
 
 .value-list {
   max-height: 0;
-  width: 250px;
+  width: inherit;
   display: flex;
   flex-direction: column;
   background: white;
@@ -59,4 +53,18 @@
       padding: 0;
     }
   }
+}
+
+// customize
+.value-list.prog-list {
+  top: 260px;
+  z-index: 3;
+}
+.value-list.sess-list {
+  top: 340px;
+  z-index: 2;
+}
+.value-list.sub-list {
+  top: 424px;
+  z-index: 1;
 }
