--- a/css/student/student.scss
+++ b/css/student/student.scss
@@ -5,6 +5,7 @@
 @import "cards";
 @import "request-view";
 @import "new-request";
+@import "request-confirmation";
 @import "mobile";
 @import "fab";
 @import "scroll-to-top";
